opencloud/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud
spec:
  ingressClassName: nginx
  tls:
  - secretName: opencloud-cert
    hosts:
    - &host opencloud.local
  rules:
  - host: *host
    http:
      paths:
      - backend:
          service:
            name: opencloud
            port:
              name: http
        path: /
        pathType: Prefix
